fixed the button spacing and added Mobile Makers info to timeline

--- a/app/assets/stylesheets/sendMail.css
+++ b/app/assets/stylesheets/sendMail.css
@@ -24,4 +24,7 @@
   position:relative;
   top:1px;
 }
+#contactForm > input.btn.submit_contactMe{
+  margin-top: 6px;
+}
 
